--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,11 +10,12 @@
 
 <body>
    <div class="container text-center ">
-      <h3 class="heading primary">Binary Upload Boom</h3>
+      <h2 class="heading primary hp">Binary Upload Boom</h2>
       <p>The #100Dev Social Network</p>
       <div class="col d-flex justify-content-center">
          <div class="card text-center mb-3" style="width: 30rem;">
             <div class="card-body">
+               <h3 class="hp2">LOGIN</h3>
                <form class="text-start" >
                   <div class="mb-3">
                      <label for="exampleFormControlInput1" class="form-label">Email</label>
@@ -25,7 +26,8 @@
                      <input type="password" class="form-control" id="exampleFormControlInput1" placeholder="password">
                   </div>
                   <a href="#" class="btn btn-primary btn-sm">Login</a>
-                  <a href="#" class="btn btn-outline-primary btn-sm">Signup</a>
+                  <a href="/signup" class="btn btn-outline-primary btn-sm">Signup</a>
+               </form>
             </div>
           </div>
       </div>
