--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,48 +1,39 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-   <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-   <link rel="stylesheet" href="/css/style.css">
-   <title>BinaryUploadBoom</title>
-</head>
+<%- include('partials/header') -%>
 
-<body>
-   <div class="container text-center ">
-      <h2 class="hp">Binary Upload Boom</h2>
-      <p>The #100Dev Social Network</p>
-      <div class="col d-flex justify-content-center">
-         <div class="card text-center mb-3" style="width: 30rem;">
-            <div class="card-body">
-               <h3 class="hp2">SIGNUP</h3>
-               <form action="#" method="#" class="text-start" >
-                  <div class="mb-3">
-                     <label for="exampleFormControlInput1" class="form-label">Username</label>
-                     <input type="text" class="form-control" id="exampleFormControlInput1">
-                  </div>
-                  <div class="mb-3">
-                     <label for="exampleFormControlInput2" class="form-label">Email Address</label>
-                     <input type="email" class="form-control" id="exampleFormControlInput2">
-                  </div>
-                  <p>We'll never share your email with anyone else.</p>
-                  <div class="mb-3">
-                     <label for="exampleFormControlInput3" class="form-label">Password</label>
-                     <input type="password" class="form-control password1" id="exampleFormControlInput3">
-                  </div>
-                  <div id="passwordMatch"></div>
-                  <div class="mb-3">
-                     <label for="exampleFormControlInput4" class="form-label">Confirm Password</label>
-                     <input type="password" class="form-control password2" id="exampleFormControlInput4">
-                  </div>                   
-                  <input type="submit" id="submitButton" class="btn btn-outline-primary btn-sm" value="Submit">
-               </form>
-            </div>
-          </div>
-      </div>
+
+<main class="col d-flex justify-content-center" >
+   <div class="card text-center justify-content-center mb-3" style="width: 30rem;" style="margin: 0px auto;">
+      <div class="row justify-content-center">
+         <section class="col-9 mt-5 mb-5">
+          <h3 class="hp2">SIGNUP</h3>
+             <form action="#" method="#" class="text-start" >
+               <div class="mb-3">
+             <label for="UserName" class="form-label">Username</label>
+             <input type="text" class="form-control" id="UserName" name="UserName">
+               </div>
+               <div class="mb-3">
+             <label for="exampleInputEmail1" class="form-label">Email Address</label>
+             <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name="email">
+             <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+               </div>
+               <div class="mb-3">
+             <label for="password" class="form-label">Password</label>
+             <input type="password" class="form-control" id="password" name="password">
+               </div>
+               <div class="mb-3">
+             <label for="confirmPassword" class="form-label">Confirm Password</label>
+             <input type="password" class="form-control" id="confirmPassword" name="confirmPassword">
+               </div>                   
+               <input type="submit" class="btn btn-outline-primary" value="Submit">
+             </form>
+          </section>
+       </div>
    </div>
-
    
-   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-</body>
-</html>
+ </main>
+
+<div class="card-body">
+   
+</div>
+            
+<%- include('partials/footer') -%>
