--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -5,8 +5,18 @@
    <div class="card text-center justify-content-center mb-3" style="width: 30rem;" style="margin: 0px auto;">
       <div class="row justify-content-center">
          <section class="col-9 mt-5 mb-5">
-          <h3 class="hp2">SIGNUP</h3>
-             <form action="#" method="#" class="text-start" >
+          <% if (locals.messages.errors) { %>
+            <% messages.errors.forEach( el => { %>
+                <div class="alert alert-danger"><%= el.msg %></div>
+            <% }) %>    
+          <% } %>
+          <% if (locals.messages.info) { %>
+            <% messages.info.forEach( el => { %>
+                <div class="alert alert-info"><%= el.msg %></div>
+            <% }) %>    
+          <% } %>
+          <h3 class="hp2">Create Account</h3>
+             <form action="/signup" method="POST" class="text-start" >
                <div class="mb-3">
              <label for="UserName" class="form-label">Username</label>
              <input type="text" class="form-control" id="UserName" name="UserName">
@@ -25,6 +35,7 @@
              <input type="password" class="form-control" id="confirmPassword" name="confirmPassword">
                </div>                   
                <input type="submit" class="btn btn-outline-primary" value="Submit">
+               <a href="/" class="btn btn-outline-primary">Login</a>
              </form>
           </section>
        </div>
