--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -19,7 +19,7 @@
              <form action="/signup" method="POST" class="text-start" >
                <div class="mb-3">
              <label for="UserName" class="form-label">Username</label>
-             <input type="text" class="form-control" id="UserName" name="UserName">
+             <input type="text" class="form-control" id="UserName" name="userName">
                </div>
                <div class="mb-3">
              <label for="exampleInputEmail1" class="form-label">Email Address</label>
