Binary Upload Boom

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -37,7 +37,7 @@
               </li>
             <% } %>
          </ul>
-         <div class="row justify-content-center mt-5">
+         <div class="row justify-content-center my-5">
             <a href="/feed" class="btn btn-primary">Return to feed</a>
          </div>
       </div>
