--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -34,7 +34,7 @@
              <label for="confirmPassword" class="form-label">Confirm Password</label>
              <input type="password" class="form-control" id="confirmPassword" name="confirmPassword">
                </div>                   
-               <input type="submit" class="btn btn-outline-primary" value="Submit">
+               <input type="submit" class="btn btn-primary" value="Submit">
                <a href="/" class="btn btn-outline-primary">Login</a>
              </form>
           </section>
